--- a/views/index.jade
+++ b/views/index.jade
@@ -20,3 +20,5 @@ block content
               img.lazy(src="images/logo.svg" data-src= article.img alt="Imagen de " + article.title)
             
             time(datetime=article.datetime)= article.date
+
+    include ./contact.jade
