--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,6 +39,8 @@ html
       input(id="bmenub" type="checkbox" class="show")
       label(for="bmenub" class="burger pseudo button") &#8801;
       .menu
+        a.pseudo.button(href="#contact") Contacto
+        a.pseudo.button(href="/Trabajos") Trabajos
         a.pseudo.button(href="/Qué-es-Makers") Asociación
         a#signup.button.join(href="/Hazte-Maker") Hazte Maker
         
