Improved few things

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,14 +32,14 @@ html
   body
     
     nav
-      a.brand(href="http://makersupv.com/")
+      a.brand(href="/")
         img.logo(src="/images/logo.svg")
         h2.name Makers UPV
         
       input(id="bmenub" type="checkbox" class="show")
       label(for="bmenub" class="burger pseudo button") &#8801;
       .menu
-        a.pseudo.button(href="#contact") Contacto
+        a.pseudo.button(href="/#contact") Contacto
         a.pseudo.button(href="/Trabajos") Trabajos
         a.pseudo.button(href="/Qué-es-Makers") Asociación
         a#signup.button.join(href="/Hazte-Maker") Hazte Maker
