--- a/views/article.jade
+++ b/views/article.jade
@@ -44,23 +44,10 @@ block content
       var form = document.querySelector("a.button.form");
       if (form) {
         form.onclick = function(){
-          form.insertAdjacentHTML('afterEnd', '<h3 class="thanks">Gracias! <a class="button" href="http://facebook.com/sharer.php?u=http://www.makersupv.com/Dise%C3%B1o-Web-Noviembre-2015">Compártelo con tus amigos</a></h3>');
+          form.insertAdjacentHTML('afterEnd', '<h3 class="thanks">Gracias! <a href="http://facebook.com/sharer.php?u=http://www.makersupv.com/#{article.id}">Compártelo con tus amigos</a></h3>');
           form.remove();
         }
       }
-
-      /* CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE */
-      var disqus_shortname = 'makersupv';
-      var disqus_identifier = "#{ article.id }";
-      var disqus_title = "#{ article.title }";
-      
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-
 
       // NEXT clicked
       var nexts = document.getElementsByClassName("next");
@@ -71,3 +58,15 @@ block content
           _gaq.push(['_trackPageview', '/next']);
           }
         }
+
+
+      /* CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE */
+      var disqus_shortname = 'makersupv';
+      var disqus_identifier = "#{ article.id }";
+      var disqus_title = "#{ article.title }";
+      
+      (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
