Fixed navbar hiding when going down

--- a/public/stylesheets/_makers.scss
+++ b/public/stylesheets/_makers.scss
@@ -161,6 +161,7 @@ nav {
   .container {
     padding: 1em;
     font-size: 1.2em;
+    bottom: 60px;
     width: 100%;
     background: rgba(0, 0, 0, .7);
   }
