Sweet alert added

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
     meta(name="description" content="Comunidad de ingenieros, emprendedores, soñadores, idealistas y demás mentes inquietas que queremos llevar a cabo proyectos interesantes, aprendiendo lo que no aprendemos en la Uni")
     link(rel='stylesheet' href='//cdn.jsdelivr.net/flexpoint/1/flexpoint.min.css')
     link(rel='stylesheet' href='/stylesheets/style.min.css')
+    link(rel="stylesheet" type="text/css" href="sweetalert/dist/sweetalert.css")
     link(rel="icon", href="/images/logo.png", type="image/png")
     block facebookimage
       meta(property='og:title' content="Makers UPV")
@@ -70,4 +71,6 @@ html
       
       
   script(src='https://cdn.jsdelivr.net/umbrella/2/umbrella.min.js')
+  
+  script(src="sweetalert/dist/sweetalert.min.js")
   script(src='javascript/javascript.js')
