--- a/public/stylesheets/_makers.scss
+++ b/public/stylesheets/_makers.scss
@@ -227,6 +227,7 @@ main {
 }
 
 .article {
+  position: relative;
   margin: -100px auto 0;
   background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, .2);
