--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,7 +42,7 @@ html
       .menu
         a.pseudo.button(href="/#contact") Contacto
         a.pseudo.button(href="/Trabajos") Trabajos
-        a.pseudo.button(href="/Qué-es-Makers") Comunidad
+        a.pseudo.button(href="/Qué-es-Makers") Asociación
         a#signup.button.join(href="/Hazte-Maker") Hazte Maker
         
     block hero
